# YtFlowCore

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
ytflow/: Cargo.toml  build.rs
ytflow-app-util/: Cargo.toml  cbindgen.toml
ytflow-app-util/include/: ytflow_core.h
ytflow-app-util/src/: cbor.rs  ffi.rs  lib.rs  profile.rs  proxy.rs  share_link.rs  subscription.rs
ytflow-app-util/src/cbor/: json.rs  raw_bytes.rs
ytflow-app-util/src/ffi/: cbor.rs  config.rs  data.rs  error.rs  interop.rs  proxy.rs  runtime.rs  share_link.rs  subscription.rs
ytflow-app-util/src/profile/: export.rs  import.rs
ytflow-app-util/src/proxy/: data.rs  obfs.rs  protocol.rs  tls.rs
ytflow-app-util/src/proxy/data/: analyze.rs  compose_v1.rs  v1.rs
ytflow-app-util/src/proxy/data/v1/: analyzer.rs
ytflow-app-util/src/proxy/obfs/: http_obfs.rs  tls_obfs.rs  ws.rs
ytflow-app-util/src/proxy/protocol/: http.rs  shadowsocks.rs  socks5.rs  trojan.rs  vmess.rs
ytflow-app-util/src/share_link/: decode.rs  encode.rs  http.rs  shadowsocks.rs  socks5.rs  trojan.rs  vmess.rs
ytflow-app-util/src/share_link/shadowsocks/: decode_legacy.rs  decode_sip002.rs  encode.rs
ytflow-app-util/src/share_link/vmess/: v2rayn.rs
ytflow-app-util/src/share_link/vmess/v2rayn/: stupid_value.rs
ytflow-app-util/src/subscription/: b64_links.rs  decode.rs  sip008.rs  surge_proxy_list.rs  userinfo.rs
ytflow-bin/: Cargo.toml  build.rs
ytflow-bin-shared/: Cargo.toml
ytflow-bin-shared/src/: lib.rs
ytflow-bin-shared/src/core/: fs_resource_loader.rs
ytflow-bin-shared/src/edit/: gen.rs
ytflow-bin-shared/src/edit/views/: input.rs  main.rs  new_profile.rs  new_proxy_group.rs  plugin_type.rs  profile.rs  proxy_group.rs  proxy_type.rs  utils.rs
ytflow-bin-shared/src/edit/views/utils/: cbor_editor.rs
ytflow-bin/src/: core.rs  edit.rs  gen.rs  main.rs  views.rs
ytflow-bin/src/edit/: views.rs
ytflow-bin/src/edit/views/: input.rs  main.rs  new_profile.rs  new_proxy_group.rs  profile.rs  proxy_type.rs  utils.rs
ytflow-bin/src/edit/views/utils/: cbor_editor.rs
ytflow-bin/src/views/: input.rs  main.rs  new_profile.rs  new_proxy_group.rs  plugin_type.rs  profile.rs  proxy_group.rs  proxy_type.rs
ytflow-bin/src/views/utils/: cbor_editor.rs
ytflow-ffi/: Cargo.toml  build.rs  cbindgen.toml
ytflow-ffi/include/: ytflow_core.h
ytflow-ffi/src/: lib.rs
ytflow-openssl-src/: Cargo.toml  build.rs
ytflow-uwp-plugin/: Cargo.toml  build.rs
ytflow-uwp-plugin/src/: collections.rs  error.rs  lib.rs  plugin.rs  storage_resource_loader.rs  tun_plugin.rs  vpn_plugin.rs
ytflow/src/: control.rs  ffi.rs  flow.rs  lib.rs  plugin.rs  resource.rs
ytflow/src/config/: error.rs  factory.rs  human_repr.rs  loader.rs  mod.rs  param.rs  plugin.rs  set.rs  verify.rs
ytflow/src/config/loader/: profile.rs  proxy.rs
ytflow/src/config/plugin/: dns_server.rs  dyn_outbound.rs  fakeip.rs  forward.rs  host_resolver.rs  http_obfs.rs  http_proxy.rs  ip_stack.rs  list_dispatcher.rs  mod.rs  netif.rs  null.rs  redirect.rs  reject.rs  resolve_dest.rs  rule_dispatcher.rs  shadowsocks.rs  simple_dispatcher.rs  socket.rs  socket_listener.rs  socks5.rs  switch.rs  system_resolver.rs  tls.rs  tls_obfs.rs  trojan.rs  vmess.rs  vpntun.rs  ws.rs
ytflow/src/control/: hub.rs  plugin.rs  rpc.rs
ytflow/src/data/: db.rs  error.rs  mod.rs  plugin.rs  plugin_cache.rs  profile.rs  proxy.rs  proxy_group.rs  resource.rs
ytflow/src/data/migrations/: V1__initial.sql  V2__proxy.sql  V3__plugin_cache.sql  V4__resource.sql  V5__resource_triggers.sql  V6__proxy_subscription.sql
ytflow/src/ffi/: config.rs  data.rs  error.rs  interop.rs  runtime.rs
ytflow/src/flow/: compact.rs  compat.rs  context.rs  datagram.rs  error.rs  manager.rs  mod.rs  multiplexed_datagram.rs  reader.rs  resolver.rs  stream.rs  tun.rs
ytflow/src/log/: mod.rs
ytflow/src/plugin/: dyn_outbound.rs  fakeip.rs  fallback.rs  forward.rs  h2.rs  itworks.rs  mod.rs  null.rs  obfs.rs  redirect.rs  reject.rs  rule_dispatcher.rs  simple_dispatcher.rs  socks5.rs  system_resolver.rs  trojan.rs  vmess.rs  ws.rs
ytflow/src/plugin/dns_server/: datagram.rs  map_back.rs  mod.rs
ytflow/src/plugin/dyn_outbound/: dyn_outbound.rs  responder.rs  select.rs
ytflow/src/plugin/dyn_outbound/config/: v1.rs
ytflow/src/plugin/forward/: datagram.rs  responder.rs  stats.rs  stream.rs
ytflow/src/plugin/host_resolver/: doh_adapter.rs  mod.rs  udp_adapter.rs
ytflow/src/plugin/http_proxy/: mod.rs  util.rs
ytflow/src/plugin/ip_stack/: datagram.rs  mod.rs  stream.rs  tcp_socket_entry.rs
ytflow/src/plugin/netif/: mod.rs  resolver.rs  responder.rs  selector.rs
ytflow/src/plugin/netif/sys/: apple.rs  linux.rs  mod.rs  win.rs
ytflow/src/plugin/netif/sys/apple/: bind.rs  dns.rs  ffi.rs
ytflow/src/plugin/netif/sys/linux/: dns.rs
ytflow/src/plugin/obfs/: simple_http.rs  simple_tls.rs
ytflow/src/plugin/resolve_dest/: forward.rs  mod.rs  reverse.rs
ytflow/src/plugin/rule_dispatcher/: builder.rs  dispatcher.rs  rules.rs  set.rs
ytflow/src/plugin/rule_dispatcher/builder/: geoip.rs  quanx_filter.rs  surge_domainset.rs
ytflow/src/plugin/rule_dispatcher/rules/: domain.rs  geoip.rs  ip.rs
ytflow/src/plugin/shadowsocks/: crypto.rs  datagram.rs  factory.rs  mod.rs  stream.rs  util.rs  xchacha20.rs
ytflow/src/plugin/shadowsocks/crypto/: aead.rs  cfb128.rs  ctor.rs  plain.rs  stream.rs
ytflow/src/plugin/shadowsocks/factory/: datagram.rs  stream.rs
ytflow/src/plugin/simple_dispatcher/: datagram.rs  rule.rs  stream.rs
ytflow/src/plugin/socket/: mod.rs  tcp.rs  udp.rs  udp_listener.rs
ytflow/src/plugin/switch/: mod.rs  responder.rs
ytflow/src/plugin/tls/: initial_data_extract_stream.rs  load_certs_windows.rs  mod.rs  stream.rs
ytflow/src/plugin/tls/ffi/: bio.rs  ctx.rs  mod.rs  ssl.rs
ytflow/src/plugin/vmess/: client.rs  hmac_hash.rs  protocol.rs  stream.rs
ytflow/src/plugin/vmess/protocol/: body.rs  header.rs  header_client.rs
ytflow/src/plugin/vmess/protocol/body/: aead.rs  aes_cfb.rs  factory.rs  none.rs  shake.rs
ytflow/src/plugin/vmess/protocol/header/: aead.rs  crypto.rs  (+2 more)
(+5 files in other folders)
