[workspace]
members = [
    "ytflow",
    "ytflow-bin",
    "ytflow-ffi",
    "ytflow-uwp-plugin",
]
resolver = "1"

[patch.crates-io]
mio = { git = "https://github.com/YtFlow/mio-noafd", branch = "noafd-v0.7-nobind" }
libsqlite3-sys = { git = "https://github.com/YtFlow/rusqlite" }

[profile.release]
debug = true
lto = true
codegen-units = 1
