[workspace]
members = [
    "ytflow",
    "ytflow-app-util",
    "ytflow-bin",
    "ytflow-bin-shared",
    "ytflow-uwp-plugin",
]
resolver = "2"

[patch.crates-io]
mio = { git = "https://github.com/YtFlow/mio-noafd", branch = "noafd-v0.7-nobind" }
libsqlite3-sys = { git = "https://github.com/YtFlow/rusqlite" }

[profile.release]
debug = true
lto = true
codegen-units = 1
