[package]
name = "ytflow-app-util"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = { version = "0.26", default-features = false }

[dependencies]
url = "2"
percent-encoding = "2"
base64 = "0.21"
thiserror = "1"
cbor4ii = { version = "0.3", features = ["use_std", "serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"] }
serde_bytes = "0.11"
uuid = { version = "1", features = ["serde"] }
ytflow = { path = "../ytflow" }
