[package]
name = "ytflow-app-util"
version = "0.7.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ffi = []

[build-dependencies]
cbindgen = { version = "0.26", default-features = false }

[dependencies]
url = "2"
percent-encoding = "2"
base64 = "0.22"
thiserror = "1"
cbor4ii = { version = "0.3", features = ["use_std", "serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"] }
serde_bytes = "0.11"
ciborium = "0.2"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
rusqlite = { version = "=0.31", default-features = false }
toml_edit = { version = "0.22", default-features = false, features = [
    "parse",
    "display",
] }
hex = "0.4"
ytflow = { path = "../ytflow" }
