[package]
name = "ytflow-ffi"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = { version = "0.24", default-features = false }

[dependencies]
ytflow = { path = "../ytflow" }
