[package]
name = "ytflow-uwp-plugin"
version = "0.1.0"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
ytflow = { path = "../ytflow" }
flume = { version = "0.10", default-features = false, features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.28", features = ["alloc", "std", "build", "Foundation_Collections", "Networking_Vpn", "Networking_Sockets", "Storage_Streams", "Win32_Foundation", "Win32_System_WinRT"] }
