[package]
name = "ytflow-uwp-plugin"
version = "0.6.2"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
ytflow = { path = "../ytflow", features = ["plugins"] }
flume = { version = "0.11", default-features = false, features = [] }
futures = { version = "0.3", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.28", features = ["alloc", "std"] }

[target.'cfg(windows)'.build-dependencies]
windows = { version = "0.28", features = ["alloc", "std", "build"] }
