[package]
name = "ytflow-uwp-plugin"
version = "0.6.2"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ytflow = { path = "../ytflow", features = ["plugins"] }
ytflow-app-util = { path = "../ytflow-app-util" }
flume = { version = "0.11", default-features = false, features = [] }
futures = { version = "0.3", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Networking",
    "Networking_Vpn",
    "Networking_Sockets",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Storage",
] }
windows-implement = "0.52"
