[package]
name = "ytflow"
version = "0.6.0"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Primitive
bitflags = { version = "2", features = ["serde"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
thiserror = "1"
pin-project-lite = "0.2"
chrono = { version = "*", features = ["serde"] }
memchr = "2"
rand = "0.8"
itertools = "0.11"
tokio-util = "0.7"
foreign-types-shared = "0.3"
regex = { version = "1.9", default-features = false, features = [
    "std",
    "perf",
] }
aho-corasick = "1.0"

# Container
flume = { version = "0.11", default-features = false, features = ["async"] }
smallvec = { version = "1", features = ["union", "serde"] }
lru = "0.11"
arc-swap = "1"
cidr = { version = "0.2", features = ["serde"] }

# FFI
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }

# Protocol
http = "0.2"
httparse = "1"
base64 = "0.21"
getrandom = { version = "0.2", default-features = false, features = ["std"] }
trust-dns-resolver = { version = "0.20", default-features = false, features = [
    "tokio-runtime",
] }
# Note: UWP build is only supported since OpenSSL 3.0
openssl = "0.10"
tokio-openssl = "0.6"
tokio-tungstenite = { version = "0.20", default-features = false, features = [
    "handshake",
] }
uuid = { version = "1", features = ["serde"] }
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "0.14.x", features = [
    "client",
    "http1",
    "http2",
] }

# Crypto
cipher = "0.4"
subtle = "2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rc4 = "0.1"
chacha20 = "0.9"
camellia = "0.1"
ctr = "0.9"
cfb-mode = "0.8"
hkdf = "0.12"
hmac = "0.12"
const-fnv1a-hash = "1"
sha3 = "0.10"
crc32fast = "1"

# Data
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
refinery = { version = "0.8", features = ["rusqlite"] }
refinery-core = "0.8"
cbor4ii = { version = "0.3", features = ["use_std", "serde1"] }
maxminddb = "0.23"

[target.'cfg(windows)'.dependencies]
# To use patched mio v0.7.
tokio = { version = "=1.16.1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "net",
    "io-util",
    "time",
    "macros",
] }
rusqlite = { version = "0.28", features = ["chrono", "winsqlite3"] }
windows = { version = "0.28", features = ["alloc", "std"] }
ipconfig = { version = "0.3", default-features = false }

[target.'cfg(windows)'.build-dependencies]
windows = { version = "0.28", features = ["alloc", "std", "build"] }

[target.'cfg(not(windows))'.dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "net",
    "io-util",
    "time",
    "macros",
    "parking_lot",
] }
rusqlite = { version = "0.28", features = ["chrono"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.13"
netlink-sys = "0.8"
netlink-packet-route = "0.17"
zbus_systemd = { version = "0.0.10", features = ["resolve1"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
fruity = { version = "0.3", features = [
    "foundation",
    "core_foundation",
    "dispatch",
] }
nix = { version = "0.26", default-features = false, features = ["net"] }
block2 = "=0.2.0-alpha.7"

[dependencies.smoltcp]
version = "0.10"
default-features = false
features = [
    "std",
    "log",
    "alloc",
    "medium-ip",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "async",
    "iface-max-route-count-2"
]
