[package]
name = "ytflow"
version = "0.6.2"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
plugins = [
    "dep:pin-project-lite",
    "dep:memchr",
    "dep:rand",
    "dep:tokio-util",
    "dep:foreign-types-shared",
    "dep:regex",
    "dep:aho-corasick",
    "dep:lru",
    "dep:arc-swap",
    "dep:libc",
    "dep:socket2",
    "dep:httparse",
    "dep:base64",
    "dep:getrandom",
    "trust-dns-resolver/tokio-runtime",
    "dep:openssl",
    "dep:tokio-openssl",
    "dep:tokio-tungstenite",
    "dep:hyper",
    "dep:cipher",
    "dep:subtle",
    "dep:md-5",
    "dep:sha1",
    "dep:sha2",
    "dep:aes-gcm",
    "dep:chacha20poly1305",
    "dep:rc4",
    "dep:chacha20",
    "dep:camellia",
    "dep:ctr",
    "dep:cfb-mode",
    "dep:hkdf",
    "dep:hmac",
    "dep:const-fnv1a-hash",
    "dep:sha3",
    "dep:crc32fast",
    "dep:maxminddb",
    "dep:ipconfig",
    "dep:rtnetlink",
    "dep:netlink-sys",
    "dep:netlink-packet-route",
    "dep:zbus_systemd",
    "dep:fruity",
    "dep:nix",
    "dep:block2",
    "dep:smoltcp",
]

[dependencies]

# Primitive
bitflags = { version = "2", features = ["serde"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
thiserror = "1"
pin-project-lite = { version = "0.2", optional = true }
chrono = { version = "*", features = ["serde"] }
memchr = { version = "2", optional = true }
rand = { version = "0.8", optional = true }
itertools = "0.11"
tokio-util = { version = "0.7", optional = true }
foreign-types-shared = { version = "0.1", optional = true }
regex = { version = "1.9", default-features = false, features = [
    "std",
    "perf",
], optional = true }
aho-corasick = { version = "1.0", optional = true }

# Container
flume = { version = "0.11", default-features = false, features = ["async"] }
smallvec = { version = "1", features = ["union", "serde"] }
lru = { version = "0.11", optional = true }
arc-swap = { version = "1", optional = true }
cidr = { version = "0.2", features = ["serde"] }

# FFI
libc = { version = "0.2", optional = true }
socket2 = { version = "0.4", features = ["all"], optional = true }

# Protocol
http = "0.2"
httparse = { version = "1", optional = true }
base64 = { version = "0.21", optional = true }
getrandom = { version = "0.2", default-features = false, features = [
    "std",
], optional = true }
trust-dns-resolver = { version = "0.20", default-features = false }
# Note: UWP build is only supported since OpenSSL 3.0
openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.6", optional = true }
tokio-tungstenite = { version = "0.20", default-features = false, features = [
    "handshake",
], optional = true }
uuid = { version = "1", features = ["serde"] }
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "0.14.x", features = [
    "client",
    "http1",
    "http2",
], optional = true }

# Crypto
cipher = { version = "0.4", optional = true }
subtle = { version = "2", optional = true }
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
rc4 = { version = "0.1", optional = true }
chacha20 = { version = "0.9", optional = true }
camellia = { version = "0.1", optional = true }
ctr = { version = "0.9", optional = true }
cfb-mode = { version = "0.8", optional = true }
hkdf = { version = "0.12", optional = true }
hmac = { version = "0.12", optional = true }
const-fnv1a-hash = { version = "1", optional = true }
sha3 = { version = "0.10", optional = true }
crc32fast = { version = "1", optional = true }

# Data
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
refinery = { version = "0.8", features = ["rusqlite"] }
refinery-core = "0.8"
cbor4ii = { version = "0.3", features = ["use_std", "serde1"] }
maxminddb = { version = "0.23", optional = true }

[target.'cfg(windows)'.dependencies]
# To use patched mio v0.7.
tokio = { version = "=1.16.1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "net",
    "io-util",
    "time",
    "macros",
] }
rusqlite = { version = "0.28", features = ["chrono", "winsqlite3"] }
windows = { version = "0.52", features = [
    "Foundation",
    "Networking_Connectivity",
    "Security_Cryptography_Certificates",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "Win32_System_WinRT",
] }
# Keep winapi as dependency
ipconfig = { version = "=0.3.1", default-features = false, optional = true }

[target.'cfg(not(windows))'.dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "net",
    "io-util",
    "time",
    "macros",
    "parking_lot",
] }
rusqlite = { version = "0.28", features = ["chrono"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { version = "0.13", optional = true }
netlink-sys = { version = "0.8", optional = true }
netlink-packet-route = { version = "0.17", optional = true }
zbus_systemd = { version = "0.0.10", optional = true, features = ["resolve1"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
fruity = { version = "0.3", features = [
    "foundation",
    "core_foundation",
    "dispatch",
], optional = true }
nix = { version = "0.26", default-features = false, features = [
    "net",
], optional = true }
block2 = { version = "=0.2.0-alpha.7", optional = true }

[dependencies.smoltcp]
version = "0.10"
optional = true
default-features = false
features = [
    "std",
    "log",
    "alloc",
    "medium-ip",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "async",
    "iface-max-route-count-2",
]
